# bert-driven-resume-classifier-app

./: Dockerfile  README.md  pyproject.toml
src/: app.py  main.py  model_utils.py  processor.py
